--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <i class="fa-thin fa-plus"></i>
                 </div>
             </form>
-            <form id="edit-form">
+            <form id="edit-form" class="hide">
                 <p> Edite a sua tarefa: </p>
                 <div class="form-control">
                     <input type="text" id="edit-input" /> 
@@ -60,7 +60,7 @@
                 </div>
             </div>   
             <div id="todo-list">
-                <div class="todo">
+                <div class="todo done">
                 <h3> Estou fazendo alguma coisa... </h3>
                 <button class="finish-todo"> 
                     <i class="fa-solid fa-check"></i>
