--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <form>
                 <p>Adicione a sua tarefa: </p>
                 <div class="form-control">
-                    <input type="text" id="todo-input" placeholder="O que voce vai fazer?">
+                    <input type="text" id="todo-input" placeholder="O que voce vais fazer agora?">
                     <button type="submit">
                         <i class="fa-thin fa-plus"></i>
                 </div>
